# michael-scott-queue

./: .gitignore  CMakeLists.txt  Dockerfile  DummyLog.h  HazardPointer.h  HazardPointerManager.h  MichaelScottQueue.h  README.md  main.cpp
example/: main.cpp
include/: MichaelScottQueue.h
include/internal/: DummyLog.h  HazardPointerManager.h
